# working-flow

./: .gitignore  a.out  blank  blank.txt  brute.cpp  bwt.cpp  formalki.py  gosha.py  info.ip  input.txt  log.txt  main  main.c  main.cpp  main.java  main.py  main2  main2.c  main2.cpp  main2.py  main3  main3.c  main3.cpp  main4.cpp  moss-cli.py  nfa_counter.cpp  output.txt  resolutions.py  run.sh  solution.py  stress.cpp  submission_dict_final_p01.json  subtask1.cpp  sufmas.cpp  task5tinkoff.cpp  temp  temp.networks  temp.py  tempCodeRunnerFile.cpp  tempCodeRunnerFile.sh  (+4 more)
C++/: arslan  biginteger.h  biginteger1.h  biginteger2.h  blank  geometry.h  main  main.cpp  main2  main2.cpp  main_biginteger1.cpp  main_geometry.cpp  main_matrix  main_matrix.cpp  matr.txt  matrix.h  matrix_arslan.h  matrix_system_tests  matrix_system_tests.cpp  string.h  system_test  system_test.cpp  temp.cpp  tempCodeRunnerFile.cpp
Golang/: go.mod  main.go  main_test.go  template.tmpl  testing-raw.txt  testing-testify.txt
Hackathon/: blank  cat_boost2  correlation  first_try10  temp  temp.py  xgboost_5
ICPC/: blank  blank.txt  output.txt  taskA  taskA.cpp  taskA.py  taskB.cpp  taskBcopy  taskBcopy.cpp  taskC  taskC.cpp  taskD  taskD.cpp  taskD.py  taskDYura.cpp  taskDc  taskDc.cpp  taskE.cpp  taskF.cpp  taskH.cpp  taskJ  taskJ.cpp  yourisst.cpp  yuraloh.cpp
ML/: blank2_106  blank3_100  blank4_500  blank_500  main.py  temp.py  test.csv
MathLogic/: task16.cpp
SQL/: SQLScript.sql
cmake/: CMakeLists.txt  main.cpp
cmake/include/: print.hpp
cmake/includes/: print.hpp
cmake/src/: print.cpp
(+158 files in other folders)
